feat: update checkout UI and improve styles

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<!-- <body class="min-h-screen bg-no-repeat bg-cover bg-gradient-to-r from-black from-30% via-slate-700  to-slate-600"> -->
+  <body class="min-h-screen bg-gradient-to-tr from-indigo-900 via-purple-800 to-pink-700  bg-no-repeat bg-cover"></body>
   <app-root></app-root>
 </body>
 </html>
